# pam_sqlite3

./: Makefile.am  autogen.sh  configure.ac
